--- a/.github/workflows/fscan.yml
+++ b/.github/workflows/fscan.yml
@@ -5,8 +5,6 @@ name: gobfuscator-fscan
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master, dev ]
   pull_request:
     branches: [ master, dev ]
 
@@ -18,12 +16,16 @@ jobs:
   fscan:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - run: |
+          # https://github.com/actions/setup-go/issues/107
+          cp -f `which go` /usr/bin/go
       - uses: actions/checkout@v2
-      - name: dependency
-        run: rm -rf /usr/local/go && curl https://dl.google.com/go/go1.16.4.linux-amd64.tar.gz -o go1.16.4.linux-amd64.tar.gz && tar -xzf go1.16.4.linux-amd64.tar.gz
       - name: build gobfuscator
-        run: export PATH=`pwd`/go/bin:$PATH && export GOROOT=`pwd`/go && git clone https://github.com/pinohans/gobfuscator.git && cd gobfuscator && go mod tidy && go build -o gobfuscator .
+        run: go env && go build -o gobfuscator .
       - name: clone fscan
-        run: git clone https://github.com/shadow1ng/fscan.git
+        run: cd /tmp && git clone https://github.com/shadow1ng/fscan.git
       - name: obfuscate fscan
-        run: export PATH=`pwd`/go/bin:$PATH && export GOROOT=`pwd`/go && cd gobfuscator && echo '{"MainPkgDir":"../fscan","OutputPath":"./fscan","NewGopath":"pkg","Tags":"","GOOS":"windows","GOARCH":"amd64","CGOENABLED":"0","WindowsHide":"1","NoStatic":"1"}' > config.json && ./gobfuscator -c config.json
+        run: go env && cp gobfuscator /tmp/fscan/gobfuscator && cd /tmp/fscan && ./gobfuscator build -ldflags="-s -w " -trimpath .
