--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ name: gobfuscator
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master, dev ]
   pull_request:
     branches: [ master, dev ]
 
@@ -19,8 +17,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16.x
+      - run: |
+          # https://github.com/actions/setup-go/issues/107
+          cp -f `which go` /usr/bin/go
       - uses: actions/checkout@v2
-      - name: dependency
-        run: rm -rf /usr/local/go && curl https://dl.google.com/go/go1.16.4.linux-amd64.tar.gz -o go1.16.4.linux-amd64.tar.gz && tar -xzf go1.16.4.linux-amd64.tar.gz
       - name: build gobfuscator
-        run: export PATH=`pwd`/go/bin:$PATH && export GOROOT=`pwd`/go && git clone https://github.com/pinohans/gobfuscator.git && cd gobfuscator && go mod tidy && go build -o gobfuscator .
+        run: go env && go build -o gobfuscator .
